--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume</title>
-    <link rel="shortcut icon" href="/nodeApp/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://shubh4527bucket.s3.us-east-2.amazonaws.com/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- main style -->
@@ -45,7 +45,7 @@
                 <div class="table-cell">
                         <h4>I am Shubham Mishra</h4>
                     <h1> Software Developer</h1> 
-                    <button type="button" class="butn btn btn-outline-dark btn-lg">Hire Me!</button>
+                    <button type="button" class="butn btn btn-outline-dark btn-lg" href="#contact">Hire Me!</button>
                   </div>
             </div>
         </div> 
@@ -75,7 +75,8 @@
         </div>
 
         <div class="col-md-6 col-12 second">  
-          <img src="/nodeApp/img/shubham.jpg" alt ="not found">
+          <img src="https://shubh4527bucket.s3.us-east-2.amazonaws.com/img/shubham.jpg" alt ="not found">
+        <!-- <img src="/nodeApp/img/shubham.jpg" alt ="not found"> -->
         </div>
       </div>
     </div>
